# edge-detector

./: README.md
app/src/main/AndroidManifest/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  processor.cpp
app/src/main/java/com/example/edgedetector/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
gl/: GLRenderer.kt
gl/shaders/: textured.vert
web/: package.json  tsconfig.json
web/public/: index.html
web/src/: index.ts
